[metadata]
name = request_http_cache
version = 0.0.1

[options]
py_modules =
    request_http_cache
install_requires =
    requests

[options.entry_points]
console_scripts =
    request_http_cache = request_http_cache:main

[options.extras_require]
test =
    black
    pylint
    flake8

[flake8]
; default Black line length is 88.
; Black docs suggests to use Bugbear’s B950 which emits error when length exceeds by 10%
; So using 88 + 10% = 97 and not installing Bugbear
max-line-length = 97
exclude =
    venv

[pylint.'MESSAGES CONTROL']
disable=
    missing-function-docstring,
    missing-module-docstring,
    missing-class-docstring,
    no-self-use
